[package]
name = "mahjong-server"
version = "0.1.0"
authors = ["David LeGare <dlegare.1001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
async-std = { version = "1.4.0", features = ["attributes"] }
futures = "0.3.1"
mahjong = { path = "../mahjong-shared" }
rand = "0.7.3"
rand_pcg = "0.2.1"
serde_json = "1.0.45"
thespian = { git = "https://github.com/randomPoison/thespian", rev = "05f8d9d" }
tokio = { version = "0.2.10", features = ["full"] }
warp = "0.2.1"
