[package]
name = "mahjong"
version = "0.1.0"
authors = ["David LeGare <dlegare.1001@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cs-bindgen = { git = "https://github.com/randomPoison/cs-bindgen", rev = "c5e31b2" }
derive_more = "0.99.2"
rand = "0.7.3"
semver = { version = "0.9.0", features = ["serde"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
strum = { version = "0.17.1", features = ["derive"] }
