[package]
name = "mahjong"
version = "0.1.0"
authors = ["David LeGare <dlegare.1001@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.28"
cs-bindgen = { git = "https://github.com/randomPoison/cs-bindgen", rev = "4cd17c2" }
derive_more = "0.99.2"
fehler = "1.0.0"
itertools = "0.9.0"
maplit = "1.0.2"
num-traits = "0.2.11"
rand = "0.7.3"
semver = { version = "0.9.0", features = ["serde"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
strum = { version = "0.17.1", features = ["derive"] }
take-if = "1.0.0"
thiserror = "1.0.15"
tracing = "0.1.13"
